# wordle-rust

./: Cargo.toml  HONOR-CODE.md  README.md  Report.md
res/: wordle.txt
src/: core.rs  interface.rs  lib.rs  main.rs  test_interface.rs  tty_interface.rs
www/: .gitignore  index.html  package.json  vite.config.js
www/src/: App.vue  fonts.css  main.js
www/src/components/: HelloWorld.vue  Index.vue
