[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4.3.10", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
wasm-bindgen = "0.2.87"
lazy_static = "1.4"
web-sys = {version = "0.3.64", features = ["Window", "Storage"] }

[dev-dependencies]
lazy_static = "1.4"
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"

[lib]
crate-type = ["cdylib", "rlib"]
